# pinn-qi-radar

./: .gitignore  LICENSE  README.md  README_ACCURACY_ENHANCEMENTS.md  README_STRONG_RUNPOD.md  fill_gaps.py  pyproject.toml  validate_plasma_model.py
configs/: default.yaml
scripts/: 01_generate_baseline_bounds.py  02_train_pinn.py  03_optimize_qi.py  04_train_qi_policy.py  05_run_ablation.py  06_generate_figures.py  07_run_multiseed_experiments.py  08_run_stress_test.py  09_generate_final_report_tables.py  10_compare_surrogates.py  11_run_ablation_final.py  12_generate_submission_package.py  run_full_experiment.py
src/pinn_qi_radar/: __init__.py  ablation.py  dataset.py  optimizer.py  pinn_model.py  plasma_channel.py  plotting.py  policy_optimizer.py  qi_bounds.py  stress_plasma.py  train.py
src/pinn_qi_radar.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_physics_bounds.py  test_pinn_model.py  test_plotting.py  test_policy_optimizer.py  test_qi_optimizer.py  test_stress_plasma.py
