[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pinn-qi-radar"
version = "0.1.0"
description = "Physics-informed AI optimization of quantum illumination bounds in hypersonic plasma-sheath channels"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Sai Krishna Thota" }
]
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "scikit-learn>=1.4",
  "torch>=2.2",
  "matplotlib>=3.8",
  "pytest>=8.0",
  "pyyaml>=6.0",
  "tqdm>=4.66"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
